# noteum

./: .biomeignore  .clinerules  .cursorrules  .dockerignore  .env.development  .env.example  .env.production  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  .prettierrc.json  .roomodes  .windsurfrules  AGENTS.md  CLAUDE.md  DOCKER_README.md  DOCKER_SETUP_GUIDE.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  LICENSE  MESSAGING_TEST_README.md  Makefile  PROJECT_STATUS_REPORT.md  README.md  biome.json  commitlint.config.js  components.json  docker-compose.README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.quick-start.yml  docker-compose.yml  eslint.config.js  index.html  jest.config.cjs  (+9 more)
.changeset/: 1740902018.json  1740916510.json  1740917443.json  config.json
.claude/: CLAUDE.md
.claude/agents/: code-analyzer.md  file-analyzer.md  parallel-worker.md  test-runner.md
.claude/commands/: code-rabbit.md  prompt.md  speckit.implement.md  speckit.specify.md  speckit.tasks.md
.claude/context/: README.md
.claude/prds/: apps.md  base-note.md  indexeddb 创建一个调整为dexie.js为基础的本地存储方案，改掉系统中使用 localStorge 的地方，并且完成本地存储的通用封装。.md  project-init.md  react-flow-usage-guide.md
.claude/rules/: agent-coordination.md  branch-operations.md  datetime.md  frontmatter-operations.md  github-operations.md  standard-patterns.md  strip-frontmatter.md  test-execution.md  use-ast-grep.md  worktree-operations.md
.github/scripts/: prepare-release.sh
.github/workflows/: build.yml  ci.yml  desktop.yml  pr-checks.yml  release.yml  tdd.yml  version.yml
.husky/: pre-commit  pre-push
.llmrules/: llmrules.yaml
.llmrules/config/: mdc.yaml
.llmrules/docs/: README.md  README.mdc  api.md  api.mdc  code-style.md  code-style.mdc  component.md  component.mdc  data-model.mdc  documentation.md  documentation.mdc  git-workflow.md  git-workflow.mdc  language.mdc  project-structure.md  project-structure.mdc  rename-proposal.md  testing.md  testing.mdc  ui-ux.mdc
.opencode/command/: openspec-archive.md
.output/: nitro.json
.storybook/: main.ts  preview.ts
apps/: package.json
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/src/: lib.rs  main.rs
apps/client/src-tauri/tests/: test_e2e.rs  test_integration.rs  test_main.rs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: DEVELOPMENT_WORKFLOW.md  LANGUAGE_RULES.md  auth-package-implementation-plan.md  database-design.md  database-schema-final.md  execution-plan.md  logto-setup.md  messaging-test-dashboard.md  migration-plan.md  task-flow-mechanism.md  tech-guide.md  trpc-implementation-guide.md
monitoring/: loki-config.yml  prometheus.yml
nginx/: nginx.conf
openspec/: project.md
redis/: redis.conf
scripts/: build-tauri.sh  check-ports.ts  clean-tauri.sh  cleanup-temp-files.sh  dev-client.sh  dev-health.sh  dev-logs.sh  dev-restart-client.sh  dev-restart-services.sh  dev-restart.sh  dev-services.sh  dev-start.sh  dev-stop.sh  dev-tauri.sh  dev-workspace.sh  init-db.sql  open-messaging-test.sh  post-build.js  pre-commit-check.sh  start-messaging-test.sh  tauri-health.sh  tauri-logs.sh  test-actions.sh  test-tauri.sh  validate-ports.ts
src/: main.tsx  routeTree.gen.ts  styles.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+658 files in other folders)
