[package]
name = "noteum-tauri"
version = "1.0.0"
description = "AI-powered note-taking desktop application"
authors = ["Noteum Team"]
license = "Apache-2.0"
repository = "https://github.com/ycc-im/noteum"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.4", features = [ "rustls-tls"] }
tauri-plugin-fs = "2.4"
tauri-plugin-shell = "2.3"
tauri-plugin-dialog = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "noteum-tauri"
path = "src/main.rs"
