[package]
name = "noteum-tauri"
version = "1.0.0"
description = "AI-powered note-taking desktop application"
authors = ["Noteum Team"]
license = "Apache-2.0"
repository = "https://github.com/ycc-im/noteum"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "fs-remove-file", "window-unminimize", "window-close", "fs-remove-dir", "fs-write-file", "shell-open", "fs-create-dir", "window-hide", "dialog-open", "window-unmaximize", "fs-exists", "window-show", "fs-read-dir", "fs-read-file", "window-start-dragging", "window-minimize", "window-maximize", "dialog-save"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "noteum-tauri"
path = "src/main.rs"
